# 4InLineMachineLearning-CPlusPlus

./: .gitignore  CMakeLists.txt  JugadorGoloso.cpp  JugadorGoloso.h  JugadorGolosoRival_ej2a.cpp  README  TorneosGeneticos.cpp  grid.cpp  inputGoloso.txt  jugGrid_ej2a.cpp  mainJugadorGoloso.cpp  outputGrid_exh_vs_abr.csv  torneo1000.cpp
